Fix 1px gap between bottom menu and bottom bar (#523)

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.css
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.css
@@ -24999,8 +24999,10 @@ body {
   bottom: 55px;
 }
 
-.offcanvas-bottom {
-  bottom: var(--blz-bottom-bar-height);
+@media (max-width: 575.98px) {
+  .offcanvas-bottom {
+    bottom: calc(var(--blz-bottom-bar-height) - 1px);
+  }
 }
 
 .offcanvas-start {
@@ -25330,7 +25332,7 @@ input.input-number-noarrows[type=number] {
 
 @media (max-width: 575.98px) {
   .offcanvas-bottom-to-end {
-    bottom: var(--blz-bottom-bar-height);
+    bottom: calc(var(--blz-bottom-bar-height) - 1px);
     right: 0;
     left: 0;
     height: var(--bs-offcanvas-height);
@@ -26078,5 +26080,4 @@ video.pswp__video {
 .version {
   color: #aaaaaa;
 }
-
-/*# sourceMappingURL=/Users/marekfisera/.copilot/copilot-worktrees/Recollections/maraf-issue-394-notifications-for-on-this-day-aa1641/src/Recollections.Blazor.UI/wwwroot/css/site.css.map */
+/*# sourceMappingURL=src/Recollections.Blazor.UI/wwwroot/css/site.css.map */
